javaオプションを変更できるように修正中